
- new table field height setting in the "Dimension & Slope Settings":
  Now you can define a real playfield height. If this value is raised, all elements on the table are also moved by that amount.
  For example: "table field height"=50 means everything on the table is raised by 50 units. This allows for real ball tunnels and more.

- new rubber element
  rubber object can be rotated around the X/Y/Z axis and shown in the editor if the checkbox "Show In Editor" is checked
  
- the thickness of a wire trigger can be scaled. 0 is the default thickness. To make it thicker use values like 0.5, 1, 1.5, 2... 

- spinners are mesh based. If the spinner bracket isn't the right one disable the "Show Bracket" settings and you will only see the spinner plate.

- introducing drop/hit target element. A drop/hit target is now a separate VP element. It is mesh based and different shapes can be selected from a drop
  down list. A target fires a hit event and has it's own timer like walls when used as drop targets.
  
- kickers are mesh based. In the kicker settings you can set "Fall through" so that if a ball hits a kicker(hole) the ball will fall through the 
  surface which is attached to it. This only works if the wall is higher than the playfield, it won't work if the hole is on the playfield.
  
- gates are mesh based. Another option was added to the gate element "Two Way" if set the ball can roll from both sides through the gate

- flippers can now feature an image

- add material editor
  
  -> quick and basic explanation:
     - First of all select if you want to design a metal material (steel, gold, silver, aluminium, etc)
       or any other one (plastic, wood, rubber, etc)

     - Then select the base color of your material
       (note that this can/will be modulated by the (optional) image on your object(s) later-on,
        so if you need your object image to look as true to the original as possible, set the base color to full white,